room card added

--- a/client/src/components/auth/login.css
+++ b/client/src/components/auth/login.css
@@ -1,3 +1,11 @@
+.login{
+ width:90%;
+ align-content: center;
+ padding-left: 20%;
+
+ 
+}
+
 .myborder{
     border: 2px rgb(16, 77, 116);
     padding: 15px;
