--- a/client/src/components/auth/register.css
+++ b/client/src/components/auth/register.css
@@ -1,3 +1,11 @@
+.register{
+  width:90%;
+  align-content: center;
+  padding-left: 20%;
+  flex-wrap: wrap;
+ 
+  
+ }
 .myborder{
     border: 2px rgb(16, 77, 116);
     padding: 15px;
