--- a/client/src/components/dashboard/dashboard.css
+++ b/client/src/components/dashboard/dashboard.css
@@ -1,19 +1,38 @@
 .dashboard{
+    width: 100%;
     display: flex;
     flex-direction: row;
-    position: 'relative';
+     position: 'relative'; 
+   background-color: hotpink;
+}
+.room-list{
+    position: relative;
+    background-color: sienna;
+    width: 42%;
+    height: 45%;
+    margin: 1%;
+   display: flex;
+  
+   flex-direction: row;
    
+}
+.container{
+    width: 75%;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    background-color:yellow;
 }
 .fas{size: 30 px;position:relative; bottom:6px;margin-right: 4px;margin-left: 6px}
 .span{font-size: 20px;position:relative; bottom:4px}
 .filter{
     background-color:rgb(197, 224, 235);
-    width: 400px;
-    display: 'flex' ;
-    position: absolute;
+    width: 25%;
+    /* display: 'flex' ; */
+    /* position: absolute;
     float:'right';
     right:2px;
-    top:60px;
+    top:60px; */
     flex-wrap : ' wrap';
     height: 100%;
     padding: 5px;
