--- a/client/src/components/rooms/CustomerView.css
+++ b/client/src/components/rooms/CustomerView.css
@@ -97,6 +97,7 @@
 
 
 .usercard{
+    margin: 2%;
     flex-direction: row;padding: 2%;
     width: 350px;
     border-width: 2px;
@@ -104,4 +105,21 @@
     border-color:black;
     flex-wrap: wrap;
 }
-.h3{}
+
+
+    .exploreButton
+    {
+      font-size: 20px;
+        width:170px;
+      height: 45px;
+      
+    }
+    .exploreButton:hover
+    {
+      
+      width:150px;
+      height: 45px;
+      background:rgb(16, 77, 116);
+      border:2px solid rgb(16, 77, 116);
+      color:#fff;
+    }
