--- a/client/src/components/rooms/roomcard.css
+++ b/client/src/components/rooms/roomcard.css
@@ -7,6 +7,7 @@
      /* position: relative;
   bottom:15%;
   right:5%;   */
+  position: relative;
   background-color: blue ;   
   width: 90%;  
   
@@ -31,8 +32,8 @@
 }
 .card-title{
     position: absolute;
-    top: 55%;
-    width:25%;
+    top: 45%;
+    width:50%;
     font-size:22px;
     line-height:50px;
     padding-left:15px;
