--- a/client/src/components/rooms/CustomerView.css
+++ b/client/src/components/rooms/CustomerView.css
@@ -41,6 +41,7 @@
     font-size:15px;
     font-weight:bold;
     color:grey;
+   
     padding: 5px;
 }
 .details{
@@ -49,7 +50,7 @@
     /* flex-direction: column; */
     width: 70%;
     height: 50%;
-    background-color: cyan;
+    background-color:thistle;
     align-content: center;
 }
 .images{
@@ -105,6 +106,9 @@
     height: 150px;
 }
 
+.ownerroom{
+    background-color: thistle;
+}
 
 
 .usercard{
@@ -115,8 +119,14 @@
     background-color: white;
     border-color:black;
     flex-wrap: wrap;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
 
+.wrapper{
+    display:"flex";
+    flex-wrap: wrap;
+    flex-direction: row;
+}
 
     .exploreButton
     {
